# ssh-challenge

./: .gitignore  Dockerfile  backdoor.sh  toolkit.nu
rust-binary/: .gitignore  Cargo.toml  Dockerfile  build.nu
rust-binary/src/: main.rs
solve/: Cargo.toml  id_ed25519  id_ed25519.pub  solve.sh
solve/src/: main.rs
